--- a/app/src/main/res/layout/msg_design.xml
+++ b/app/src/main/res/layout/msg_design.xml
@@ -13,31 +13,88 @@
     android:paddingRight="16dp"
     android:paddingTop="10dp">
 
-    <LinearLayout
-        android:id="@+id/i"
+<LinearLayout android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="15dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
+    android:paddingRight="15dp"
+    android:background="@drawable/card_background_selector"
+    android:descendantFocusability="afterDescendants"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/tvTitle"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:text="---"
+        android:textColor="#ff0000"
+        android:layout_gravity="top"
+        />
+
+    <TextView
+        android:id="@+id/txt_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:focusable="false"
+        android:gravity="right"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF0000" />
+    <View
+        android:id="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@drawable/shape" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/asasasas">
+        <ImageView
+            android:id="@+id/img_fav"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@mipmap/nf"
+            android:layout_gravity="right"/>
 
         <ImageView
-
-            android:id="@+id/img_fav"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/nf"
-            android:focusable="false" />
-
-        <TextView
-            android:id="@+id/txt_msg"
+            android:id="@+id/shared"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/wha"
+            android:layout_gravity="left"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/img_fav"
+            android:layout_toEndOf="@+id/img_fav"
+            />
+        <ImageView
+            android:id="@+id/share"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@mipmap/sha"
+            android:layout_toRightOf="@+id/copy"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+        <ImageView
+            android:id="@+id/copy"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@mipmap/copy"
             android:gravity="right"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FF0000"
-            android:focusable="false" />
+            android:layout_gravity="right"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/share"
+            android:layout_toStartOf="@+id/share" />
+
 
     </LinearLayout>
+
+</LinearLayout>
 
 </RelativeLayout>
