--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sarrawi.mymessages.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_openRight"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/navigation_drawer_list"
+        app:showAsAction="always" />
 </menu>
