--- a/app/src/main/res/layout/content_activity_text.xml
+++ b/app/src/main/res/layout/content_activity_text.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
     android:background="@drawable/back"
     android:layout_width="match_parent"
@@ -27,17 +28,19 @@
 
             <EditText
                 android:id="@+id/intext"
-                android:background="#ffffff"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="9dp"
-                android:hint="ادخل النص هنا ..."
+                android:background="#ffffff"
                 android:ems="10"
-                android:layout_centerHorizontal="true">
+                android:hint="ادخل النص هنا ..."
+                android:minHeight="48dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
                 <requestFocus />
             </EditText>
             <ImageView
@@ -135,15 +138,25 @@
                         android:layout_marginTop="3dp" android:src="@drawable/share" />
 
                 </LinearLayout>
-                <EditText android:id="@+id/out2" android:background="#ffffff" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="140dp" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:ems="10"
+
+                <EditText
+                    android:id="@+id/out2"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:lines="1"
-                    android:maxLines="5"
+                    android:layout_marginLeft="10dp"
+                    android:background="#ffffff"
                     android:cursorVisible="false"
-                    android:scrollbars="vertical"
+                    android:ems="10"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:inputType="textMultiLine"/>
+                    android:inputType="textMultiLine"
+                    android:lines="1"
+                    android:maxLines="5"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:scrollbars="vertical"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
             <LinearLayout
